--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,18 @@
-platform :ios, '13.0'
-
+platform :ios, '14.0'
 
 target 'Runner' do
   use_frameworks!
 
-  # Pods for Runner
+  # Firebase dependencies
   pod 'Firebase/Core'
   pod 'Firebase/Firestore'
+  pod 'Firebase/Analytics'
+  pod 'Firebase/Crashlytics'
+  
+  # Exclude arm64 for simulators
+  post_install do |installer|
+    installer.pods_project.build_configurations.each do |config|
+      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+    end
+  end
 end
