--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,25 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: "^0.14.1"
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/8.jpg"
+  min_sdk_android: 23 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/8.jpg"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/8.jpg"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/8.jpg"
   flutter_lints: ^4.0.0
 
 flutter:
