--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,8 +9,10 @@ target 'Runner' do
 
   # Exclude arm64 for simulators
   post_install do |installer|
-    installer.pods_project.build_configurations.each do |config|
-      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      end
     end
   end
 end
