--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,7 @@ target 'Runner' do
   # Firebase dependencies
   pod 'Firebase/Core'
   pod 'Firebase/Firestore'
+  pod 'cloud_firestore'
 
   # Exclude arm64 for simulators
   post_install do |installer|
