--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,13 +6,14 @@ target 'Runner' do
   # Firebase dependencies
   pod 'Firebase/Core'
   pod 'Firebase/Firestore'
+
+  # Exclude arm64 for both simulators and devices
   post_install do |installer|
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
-        # Exclude arm64 for both simulators and devices
         config.build_settings['EXCLUDED_ARCHS'] = 'arm64'
         config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
       end
     end
   end
-  
+end
