--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '13.0'
 
 target 'Runner' do
-  use_frameworks!
+  use_modular_headers!
 
   # Firebase dependencies
   pod 'Firebase/Core'
@@ -11,7 +11,7 @@ target 'Runner' do
   post_install do |installer|
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
-        config.build_settings['EXCLUDED_ARCHS'] = 'arm64'
+       #config.build_settings['EXCLUDED_ARCHS'] = 'arm64'
         config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
       end
     end
