--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,17 +1,22 @@
 platform :ios, '13.0'
 
 target 'Runner' do
-  use_modular_headers!  # Better compatibility with some libraries
+  use_modular_headers!
 
   # Firebase dependencies
   pod 'Firebase/Core'
   pod 'Firebase/Firestore'
-  pod 'gRPC-Core', '~> 1.28.2'  # Pin to a known working version
+
+  # Explicitly install gRPC and its dependencies
+  pod 'gRPC-Core'
+  pod 'gRPC-C++'
+  pod 'gRPC-ProtoRPC'
+  pod 'gRPC-RxLibrary'
+  pod 'gRPC-OpenCensus'
 
   post_install do |installer|
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
-        # Exclude arm64 only for simulators
         config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
       end
     end
