--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,17 +6,14 @@ target 'Runner' do
   # Firebase dependencies
   pod 'Firebase/Core'
   pod 'Firebase/Firestore'
-
-  # Explicitly install gRPC and its dependencies
-  pod 'gRPC-Core'
-  pod 'gRPC-C++'
-  pod 'gRPC-ProtoRPC'
-  pod 'gRPC-RxLibrary'
-  pod 'gRPC-OpenCensus'
+  
+  # Pin gRPC-Core to a stable version
+  pod 'gRPC-Core', '~> 1.28.2'  # Or another known stable version
 
   post_install do |installer|
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
+        # Exclude arm64 only for simulators (for M1 Macs)
         config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
       end
     end
