--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,7 +8,7 @@ target 'Runner' do
   pod 'Firebase/Firestore', '~> 10.0.0'
 
   # Pin gRPC-Core to a stable version (consider using a newer stable version)
-  pod 'gRPC-Core', '~> 1.30.0'
+  pod 'gRPC-Core'
 
   post_install do |installer|
     installer.pods_project.targets.each do |target|
