--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,7 +13,7 @@ target 'Runner' do
   post_install do |installer|
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
-        # Exclude arm64 only for simulators (important for M1 Macs)
+        config.build_settings['EXCLUDED_ARCHS'] = 'arm64'
         config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
       end
     end
