--- a/ios/Flutter/Debug.xcconfig
+++ b/ios/Flutter/Debug.xcconfig
@@ -1,1 +1,4 @@
-#include "Generated.xcconfig"
+# Include the CocoaPods configuration
+# This file is generated when you run 'pod install'
+# Adjust the path if necessary based on your Podfile setup
+include "Pods/Target Support Files/Pods-Runner/Pods-Runner.xcconfig"
